[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Actors/Weapons/Projectiles/PlasmaBall.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Weapons/Projectiles/PlasmaBall.gd" type="Script" id=2]

[sub_resource type="Animation" id=5]
resource_name = "End"
length = 0.36
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "Loop"
length = 0.2
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3, 2, 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Startup"
length = 0.11
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("animationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Loop", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 28.0179

[node name="PlasmaBall" type="Area2D" groups=["Player Projectile"]]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )
hframes = 6

[node name="animationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Startup"
anims/End = SubResource( 5 )
anims/Loop = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Startup = SubResource( 3 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_PlasmaBall_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlasmaBall_body_exited"]
